<resources>
    <string name="app_name">Todolist</string>
    <string name="main_activity_name">My Todolist</string>
    <string name="edit_activity">Task Editor</string>
    <string name="deletetask_label">Delete Task</string>
    <string name="selected_edittask_label">Selecte Modified Task</string>
    <string name="prioritize_task_label">Mark/Unmark Task</string>
    <string name="search_task_label">Task Search</string>
    <string name="edit_task_label">Edit Task</string>

    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <string name="default_task">Please keyin your task</string>
    <string name="default_date">yyyy/mm/dd</string>
    <string name="default_completed">false</string>
    <string-array name="progressList">
        <item>false</item>>
        <item>true</item>
    </string-array>

</resources>
