<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/Date"
        android:text="@string/default_date"
        android:layout_width="@dimen/layout_date_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/Task"
        android:layout_width="@dimen/layout_task_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/default_task"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="10dp"
        android:layout_weight="5"
        android:layout_gravity="center_vertical"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/Completed"
        android:layout_width="@dimen/layout_status_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:text="@string/default_completed"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:textSize="18sp" />

</LinearLayout>